Fix font scaling, tweak intro text, add container spacing

--- a/app/assets/stylesheets/application/_base.scss
+++ b/app/assets/stylesheets/application/_base.scss
@@ -8,14 +8,10 @@ html,
 body {
   height: 100%;
   min-height: 100%;
-  overflow: hidden;
 }
 
 html {
   box-sizing: border-box;
-}
-
-body {
   background-color: $body-bg;
   // box-shadow: inset 0 0 20px 5px $color-black;
   color: $body-text;
