--- a/app/assets/stylesheets/application/_page.scss
+++ b/app/assets/stylesheets/application/_page.scss
@@ -1,6 +1,8 @@
 .page {
+  box-shadow: inset 0 0 20px 5px $color-black;
   height: 100%;
   left: 0;
+  overflow: auto;
   position: fixed;
   top: 0;
   width: 100%;
