--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -19,20 +19,20 @@
   text-align: center;
 }
 
-.intro__heading {
+.intro-heading {
   color: $color-lighter;
   font-size: 1.1rem;
   font-weight: bold;
   margin-bottom: $space-lg;
 }
 
-.intro__line {
-  @include media-breakpoint-up("sm") {
-    display: block;
-  }
+.intro-text {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 25em;
 }
 
-.intro__char {
+.intro-char {
   animation: typing 1s;
   animation-fill-mode: forwards;
   display: inline;
@@ -41,7 +41,7 @@
 }
 
 @for $i from 1 through 300 {
-  .intro__char--#{$i} {
+  .intro-char--#{$i} {
     animation-delay: (($i * 0.025s) + 1s);
   }
 }
